# workload-identity-analyzer

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  wi-analyzer
.github/workflows/: publish.yaml  unittest.yaml
analyzer/: analyzer.py
src/: analyzer.py  gke.py  gsa.py  reporter.py
tests/: __init__.py  test_gkeworkload.py  test_gsaproject.py
