[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'setuptools-scm']

[project]
name = 'wi-analyzer'
description = 'GKE Workload Identity Analyzer'
authors = [
    {name = 'Eyal Zekaria', email='eyal.z@doit-intl.com'},
]
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    'Programming Language :: Python :: 3 :: Only',
]
keywords = ['gke', 'workload-identity']
dynamic = ['version', 'dependencies']

[project.scripts]
wi-analyzer = 'analyzer:main'

[tool.setuptools.dynamic]
dependencies = {file = 'requirements.txt'}

[tool.setuptools_scm]
